# bkk

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  bunkankun.md
import/: pyproject.toml
import/recipes/: KR3a0013-export.yaml  KR6q0053.yaml
import/tests/: test_canonicalize.py  test_krp_export.py  test_krp_roundtrip.py  test_recipe.py  test_tls_export.py  test_xml_tree.py
module/: .bkkrc.sample  INDEX.md  README.md  VALIDATOR.md  bkkrc  old-plan-ignore-for-now.md  pyproject.toml  web.md
module/bkk/: __main__.py  cli.py  cli_common.py  config.py  marker_assets.py  short_refs.py
module/bkk_importer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
module/recipes/: KR3a0013.yaml  multi-pin-inspection.yaml  voice-inspection.yaml
module/refs/: bkk-charset-cjk-v1.yaml  bkk-mapping-variant-fold-v1.yaml
module/tests/: test_annotations_delete.py  test_body_text_charset.py  test_bsky_lexicon_roundtrip.py  test_cbeta_direct_import.py  test_chars_canonicalize.py  test_chars_cli.py  test_chars_lemma_repeat.py  test_cli_common.py  test_concept_import.py  test_edit_offsets.py  test_edit_sections.py  test_exporter_cli.py  test_importer_cross_source_merge.py  test_index_catalog.py  test_index_duplications.py  test_index_kwic.py  test_index_merge.py  test_index_parallel.py  test_index_voice.py  test_index_witness.py  test_info_text_id.py  test_jcs.py  test_krp_cli.py  test_krp_export.py  test_krp_roundtrip.py  test_krp_source.py  test_krp_witness_pagebreaks.py  test_marker_assets.py  test_parallel_markers_script.py  test_read_bundle.py  test_recipe.py  (+35 more)
(+471 files in other folders)
